# deverp

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  PHASE_14_SUMMARY.md  README.md  plan.md  setup_database.sql
.cargo/: config.toml
.claude/: settings.local.json
.sqlx/: query-0247ffa89f782d4ffef7b0107b4a03e5538bf85fbbee0467407ebac708c3339d.json  query-0d9f0aa656dee9b3823d9dc70b1bc0bd97295c05a85aea10f14650f79ff05563.json  query-10f7e077353d6eae0ca29492d0f4fd18e802f88b39332e96d202738281d10514.json  query-11eb8ba2081e03e18a7b263ce34e3a6ea5eef7a5ecbd26c0ac7935a4d34ee341.json  query-1324234612d96565374164815d119ce216ba77fd7c982fa33b679f7b6cfb079f.json  query-14afa5d6ad776520d31da7b469b6c2666b819afbb9cd959168859a3af8cb1331.json  query-163263a7f28e4dc816176962081116d55ad729ab8ecc145457fd7366c689350f.json  query-1649fa042fae726ea7f3ff97ddd180163220db3778a847f6f80e7dacb9e63e4c.json  query-183b89ed606be5071c883c02c7ff69e425e41c39d2b2c48483f44ec34e2769db.json  query-18b61c9c68efe6160efdcd1b1d9b11917f09a6e65ed6e34ba144ffb32062724b.json  query-18fbf75bab488bf731202e27f03c258dfef380e247ab8bb5191936fa012ef44d.json  query-1e65dfcc4ece67014660433b2d3c4f24e50fd906f07cfd36ba1fafffc6921eaa.json  query-2051d46ed8ce56a4d4a5a66fe4cd58b8490c1172b5223799e25bad9cb4212d69.json  query-23c154763005420f49aaaa7e7e648da0fa8bae574f420f67a9badb70aa9f5ff5.json  query-251c666aab958bdcf7975817592b04366a56c0fdecbc6cbb3beaaf6615bfe523.json  query-35454e0c4f56cb691cbcca2935bde668e4b02f23535e96bd47320becbc32a60b.json  query-399eb4b228fb5a8f5780277271ad5491dea39d913c996289016be94e3dd68f38.json  (+53 more)
(+73 files in other folders)
